tests/baselines/reference/parserComputedPropertyName18.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts(1,10): error TS1170: Computed property names are not allowed in type literals.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts(1,11): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts (2 errors) ====
    var v: { [e]?(): number };
             ~~~
!!! error TS1170: Computed property names are not allowed in type literals.
              ~
!!! error TS2304: Cannot find name 'e'.